--- a/index.html
+++ b/index.html
@@ -54,8 +54,18 @@
                 <br><br>
                 <input type="text" name="music5" id="music5" placeholder="5 - Musica">
                 <br><br><br>
-                <input type="button" value="GERAR ESCALA" onclick="gerar()"><!--Func. que gera a escala-->
-                <div id="result"></div>
+                <input type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"  value="GERAR ESCALA" onclick="gerar()" class="btn btn-secondary"><!--BUTTON PARA GERAR MENSAGEM NA TELA-->
+
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"> <!--MENSAGEM NA TELA BOOTSTRAP-->
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <div id="result"> <!--DIVI QUE CHAMA AS INFO. PARA MENSAGEM NA TELA-->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>  
     </div>
@@ -71,6 +81,8 @@
 
     <!-- JavaScript PARA GERAR A ESCALA -->
     <script>
+            
+
         function gerar (){
             var auto = window.document.getElementById('autor1').value
             var ministro = window.document.getElementById('ministro').value
@@ -85,9 +97,8 @@
             var music5 = window.document.getElementById('music5').value
 
             var result = window.document.getElementById('result')
-            
             result.innerHTML = `<hr> <strong>Autor:</strong> ${auto} <br> <strong>Ministro:</strong> ${ministro} <br> <strong>Evento:</strong> ${evento}  <br> <strong>Data do evento:</strong> ${dataFormatada} <hr><br> <center><h5><i><u>MÚSICAS</u></i></h5></center> <strong>1°-</strong> ${music1} <br> <strong>2°-</strong> ${music2} <br> <strong>3°-</strong> ${music3} <br> <strong>4°-</strong> ${music4} <br> <strong>5°-</strong> ${music5}`}
-    </script>
+            </script>
 
     <!-- JavaScript BOOTSTRAP 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
